--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	    <meta charset="utf-8" />
 	    <meta name="viewport" content="width=1024" />
 	    <meta name="apple-mobile-web-app-capable" content="yes" />
-	    <title>Teoria e Tecnica di una Webapp | by Stefano Sergio</title>
+	    <title>Mobile Webapp - Theory and Technique | by Stefano Sergio</title>
 	    
 	    <meta name="description" content="**description" />
 	    <meta name="author" content="Stefano Sergio" />
@@ -30,7 +30,7 @@
 
 		<div id="impress" data-width="1400" data-height="800">
 			<div id="step-1" class="step background" data-x="0" data-y="0" data-scale='5'>
-				<img id="mainScheme" src='imgs/map-clean.png' />
+				<img id="mainScheme" src='imgs/map.svg' />
 				<h3 style='top: 222px; left: 307px;'>Performance</h3>
 				<h3 style='top: 222px; left: 202px;'>Optimization</h3>
 				<h3 style='top: 251px; left: 99px;' >Data Source</h3>
@@ -46,7 +46,7 @@
 
 			<div id="start" class="step" data-x="-740" data-y="-210" data-rotate-x="0"  data-scale='0.3' data-z="0">
 				<div class="basic">
-					<div>Appsfuel Webapp 2.0</div>
+					<div>Mobile Webapp - Theory and Technique </div>
 					<div>Tips & Tricks</div>
 					<div></div>
 				</div>
@@ -234,6 +234,7 @@
 		h3 {
 			font-size: 12px;
 			position: absolute;
+			display: none;
 		}
 		.demo-slide img{
 			border: 1px dotted royalblue;
