--- a/index.html
+++ b/index.html
@@ -122,39 +122,33 @@
 			</div>
 
 			
-			<div id="paginator-demo-current" class="step demo-slide " data-x="700" data-y="94" data-rotate-y="90"  data-scale='0.1' >
+			<div id="paginator-demo-current" class="step demo-slide " data-x="800" data-y="94" data-rotate-y="90"  data-scale='0.1' >
 				<div id="demo-prev-page" style='opacity:0.5;' ><img id="paginator-img" src='imgs/01-prev.jpg' /></div>
 				<div style='left:365px;'><img id="paginator-img" src='imgs/01-current.jpg' /></div>
 			</div>
-
-			<div id="paginator-demo-next" class="step demo-slide " data-x="725" data-y="94"  data-rotate-y="90"  data-scale='0.1' >
+			<div id="paginator-demo-next" class="step demo-slide " data-x="800" data-y="94"  data-rotate-y="90" data-z="-25" data-scale='0.1' >
 				<div style='left:440px;'><img id="paginator-img" src='imgs/01-next.jpg' /></div>
 			</div>
-
-			<div id="paginator-demo-future" class="step demo-slide " data-x="725" data-y="94"  data-rotate-y="90"  data-scale='0.1' >
+			<div id="paginator-demo-future" class="step demo-slide " data-x="800" data-y="94"  data-rotate-y="90" data-z="-25" data-scale='0.1' >
 			</div>
-
-			<div id="paginator-demo-new" class="step demo-slide " data-x="725" data-y="94" data-rotate-y="90" data-scale='0.1' >
+			<div id="paginator-demo-new" class="step demo-slide " data-x="800" data-y="94" data-rotate-y="90" data-z="-25" data-scale='0.1' >
 				<div style='left:765px;'><img id="paginator-img" src='imgs/01-new.jpg' /></div>
 			</div>
 
 
+			<div id="resumee-3" class="step" data-x="-0" data-y="0"  data-scale='1' ></div>
+			<div id="gui-carousel" class="step" data-x="250" data-y="-100"  data-scale='0.2' >
 
-
-			<div id="resumee-3" class="step" data-x="-750" data-y="0"  data-scale='1.5' ></div>
-			<div id="gui-carousel" class="step" data-x="470" data-y="-520"  data-scale='0.3' >
-				<ul  style="margin-top: 4em;">
-					<li>An image carousel</li>
-				</ul>
 			</div>
-			<div id="zoom-carousel" class="step" data-x="730" data-y="-520"  data-scale='0.3' >
-				<ul  style="margin-top: 8em;">
+			<div id="zoom-carousel" class="step" data-x="400" data-y="-75"  data-scale='0.2' >
+				<h3>Carousel</h3>
+				<ul>
 					<li>Handles any number of images</li>
 					<li>Creates an 'inifnite' effect adding a copy of the first and the last image  </li>
 				</ul>
 			</div>
 
-			<div id="demo-carousel" class="step carousel" data-x="2730" data-y="-2520"  data-scale='0.3' style="width:1530px" >
+			<div id="demo-carousel" class="step carousel" data-x="400" data-y="-75" data-rotate-y='90'  data-scale='0.3' style="width:1530px" >
 			
 				<ul style="list-style: none; margin: 0px; height:143px;">
 					<li data-index="3" data-fake="true" style="display: inline-block;  width: 281px;"></li>
@@ -168,7 +162,8 @@
 				</ul>
 
 			</div> 
-			<div id="demo-carousel-2" class="step carousel" data-x="2730" data-y="-2520"  data-scale='0.3' style="width:1530px" >
+
+			<div id="demo-carousel-2" class="step carousel" data-x="400" data-y="-75" data-rotate-y='90'  data-scale='0.3' style="width:1530px" >
 			
 				<ul style="list-style: none; margin: 0px; height:143px;">
 					<li data-index="3" data-fake="true" style="display: inline-block;  width: 281px;">
@@ -246,6 +241,7 @@
 			padding: 0;
 			font-size: 4.5em;
 			margin-bottom: 0.3em;
+			display: none;
 			
 		}
 		.demo-slide img{
