--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<div id="usability-gestures" class="step" data-x="-30" data-y="-131"  data-scale='0.2' >
 				<h3>Usability</h3>
 				<ul>
-					<li>“It is far better to adapt the technology to the user than to force the user to adapt to the technology.” – Larry Marine</li>
+					<li>“It is far better to adapt the technology to <br>the user than to force the user to adapt <br>to the technology.” – Larry Marine</li>
 				</ul>
 			</div>
 
@@ -106,7 +106,7 @@
 				<h3>Optimization</h3>
 				<ul>
 					<li>Too much grids will kill you</li>
-					<li>...besides you'll probably never see all those data</li>
+					<li>...besides you'll probably never see <br>all those data</li>
 				</ul>
 			</div>
 			<div id="zoom-paginator" class="step " data-x="608" data-y="84"  data-scale='0.2' >
@@ -147,9 +147,9 @@
 				</ul>
 			</div>
 
-			<div id="demo-carousel" class="step carousel" data-x="600" data-y="-75" data-rotate-y='90'  data-scale='0.2' style="width:1530px" >
+			<div id="demo-carousel" class="step carousel" data-x="900" data-y="-75" data-rotate-y='90'  data-scale='0.2' style="width:1530px" >
 			
-				<ul style="list-style: none; margin: 0px; height:143px;">
+				<ul style="list-style: none; margin: 0px; height:143px; overflow: visible">
 					<li data-index="3" data-fake="true" style="display: inline-block;  width: 281px;"></li>
 
 					<li data-index="0" style="display: inline-block;  width: 281px;">
@@ -162,7 +162,7 @@
 
 			</div> 
 
-			<div id="demo-carousel-2" class="step carousel" data-x="600" data-y="-75" data-rotate-y='90'  data-scale='0.2' style="width:1530px" >
+			<div id="demo-carousel-2" class="step carousel" data-x="900" data-y="-75" data-rotate-y='90'  data-scale='0.2' style="width:1530px" >
 			
 				<ul style="list-style: none; margin: 0px; height:143px;">
 					<li data-index="3" data-fake="true" style="display: inline-block;  width: 281px;">
@@ -178,14 +178,14 @@
 
 			</div>
 
-			<div id="staytuned" class="step" data-x="-460" data-y="-210" data-rotate-y="-90" data-scale='0.3' data-z="0">
+			<div id="staytuned" class="step" data-x="-760" data-y="-210" data-rotate-y="-90" data-scale='0.3' data-z="0">
 				<div class="basic">
 					<p class="medium">"If only I had a mobile framework..."</p>
 					<p class="small">Stay Tuned for the <br><i>Appsfuel mobile-oriented Framework</i></p>
 				</div>
 			</div>
 
-			<div id="thanks" class="step" data-x="-460" data-y="-210" data-rotate-y="-180" data-scale='0.3' data-z="0">
+			<div id="thanks" class="step" data-x="-760" data-y="-210" data-rotate-y="-180" data-scale='0.3' data-z="0">
 				<div class="basic">
 					<h5></h5>
 					<p class="medium">Special Thanks</p>
@@ -228,7 +228,7 @@
 			background: red;
 		}
 		.step ul {
-			max-width: 1030px;
+			max-width: 2030px;
 		}
 		.step li {
 			font-size: 1.5em;
